--- a/Resources/skeletons/crud/views/show.html.twig
+++ b/Resources/skeletons/crud/views/show.html.twig
@@ -8,11 +8,21 @@
         {%- for field, metadata in fields %}
 
             <tr>
-                <th>{{ field|capitalize }}</th>
+                <th>{{ '{{ \'list.label_'~field~'\'|trans({}, \''~bundle~entity_class~'\') }}' }}</th>
 
             {%- if metadata.type in ['date', 'datetime'] %}
 
                 <td>{{ '{{ entity.'~ field|replace({'_': ''}) ~'|date(\'Y-m-d H:i:s\') }}' }}</td>
+
+            {%- elseif metadata.type in ['boolean'] %}
+
+                <td>
+                {{ '{% if entity.' ~ field|replace({'_': ''}) ~ ' %}' }}
+                    <img src="{{ '{{' }} asset('bundles/sonataadmin/famfamfam/accept.png') {{ '}}' }}">
+                {{ '{% else %}' }}
+                    <img src="{{ '{{' }} asset('bundles/sonataadmin/famfamfam/exclamation.png') {{ '}}' }}">
+                {{ '{% endif %}' }}
+                </td>
 
             {%- else %}
 
