Update templates to respect PSR2

--- a/Resources/skeletons/admin.php.twig
+++ b/Resources/skeletons/admin.php.twig
@@ -43,13 +43,17 @@ class {{ entityName }}Admin extends BaseAdmin
 
         {%- endfor %}
 
-            ->add('_action', 'actions', array(
-                'actions' => array(
-                    'view' => array(),
-                    'edit' => array(),
-                    'delete' => array(),
+            ->add(
+                '_action',
+                'actions',
+                array(
+                    'actions' => array(
+                        'view' => array(),
+                        'edit' => array(),
+                        'delete' => array(),
+                    )
                 )
-            ));
+            );
     }
 
     protected function configureShowFields(ShowMapper $showMapper)
