Use inline action "show" instead of "view"

--- a/Resources/skeletons/admin.php.twig
+++ b/Resources/skeletons/admin.php.twig
@@ -48,7 +48,7 @@ class {{ entityName }}Admin extends BaseAdmin
                 'actions',
                 array(
                     'actions' => array(
-                        'view' => array(),
+                        'show' => array(),
                         'edit' => array(),
                         'delete' => array(),
                     )
