Add support for the new AbstractAdmin class

--- a/Resources/skeletons/admin.php.twig
+++ b/Resources/skeletons/admin.php.twig
@@ -2,7 +2,7 @@
 
 namespace {{ namespace }}\Admin;
 
-use Sonata\AdminBundle\Admin\Admin as BaseAdmin;
+use {{ base_admin_class }} as BaseAdmin;
 use Sonata\AdminBundle\Form\FormMapper;
 use Sonata\AdminBundle\Datagrid\DatagridMapper;
 use Sonata\AdminBundle\Datagrid\ListMapper;
